@@ -1,21 +1,18 @@
 apply plugin: "java"
-apply plugin: "ivy-publish"
-apply plugin: 'maven'  
-apply plugin: "maven-publish"
-apply plugin: 'signing'
-apply plugin: 'eclipse'
 
-sourceCompatibility = 1.7  
-targetCompatibility = 1.7  
+apply from: './java_base.gradle'
+apply from: './maven_push.gradle'
 
-archivesBaseName=projectName
-
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+repositories {
+    mavenCentral()
+    maven {
+		url  "http://maven.aliyun.com/nexus/content/groups/public/"
+	}
+	maven {
+		url  ant.properties['user.home'] +  "/.m2/repository"
+	}
 }
-tasks.withType(Javadoc) {
-    options.encoding = "UTF-8"
-}
+
 sourceSets {
     main {
         java {
@@ -25,132 +22,19 @@ sourceSets {
 }
 
 ext {
-	compileDependencies =[        
-		'org.springframework:spring-web:4.3.2.RELEASE'    
-        ,'org.springframework:spring-webmvc:4.3.2.RELEASE'
-    	,'cn.featherfly:featherfly-web:1.1.4'
-//    	,'cn.featherfly:featherfly-web:latest.integration'
-        ,'net.sf.jxls:jxls-core:1.0.6'
-        ,'net.sf.jxls:jxls-reader:1.0.6'
-//    	,'org.jxls:jxls:2.3.0'
-//        ,'org.jxls:jxls-reader:2.0.2'
-//        ,'org.jxls:jxls-poi:1.0.11'
-        ,'org.apache.poi:poi-ooxml:3.14'
-		]
-	publishRepo = ant.properties['user.home'] + "/.repository/ivy2/gradle_publish"
 }
 
-repositories {
-	mavenCentral()
-	maven {
-		url  ant.properties['user.home'] +  "/.m2/repository"
-	}
-}
-
-task sourcesJar(type: Jar) {
-	classifier "sources"
-    from sourceSets.main.java.srcDirs
-}
-
-task javadocJar(type: Jar, dependsOn:javadoc) { 
-     classifier = "javadoc"
-     from javadoc.destinationDir 
-}
-
-artifacts {  
-    archives jar  
-    archives javadocJar  
-    archives sourcesJar  
-}  
- 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-        	from components.java
-            artifact (sourcesJar) {
-             	classifier "sources"
-            }
-			artifact (javadocJar) {
-				classifier "javadoc"
-			}
-        }
-    }    
-}
 dependencies {
-	for (def depend : compileDependencies)  {
-		compile (depend)
-	}
+	compile ('org.springframework:spring-web:4.3.7.RELEASE'    
+        ,'org.springframework:spring-webmvc:4.3.7.RELEASE'
+    	,'cn.featherfly:featherfly-web:1.1.4'
+    	,'cn.featherfly:featherfly-conversion-jdk8:1.0.0'
+        ,'net.sf.jxls:jxls:2.4.0'
+        ,'org.jxls:jxls-poi:1.0.12'        
+        )
+	compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.13'
+	
     testCompile (
     	'org.testng:testng:6.8.8'
     )
-}
-//为所有的jar包做数字签名  
-signing {  
-    sign configurations.archives  
-}  
-
-uploadArchives {  
-    repositories {  
-        mavenDeployer {  
-            //为Pom文件做数字签名  
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) } 
-  
-            //指定项目部署到的中央库地址，UserName和Password就是Part 1中注册的账号。
-            //https://oss.sonatype.org/content/repositories/snapshots
-            //https://oss.sonatype.org/service/local/staging/deploy/maven2  
-            repository(url:"https://oss.sonatype.org/service/local/staging/deploy/maven2") {  
-                authentication(userName: 'yufei', password: 'yufeimvn101')  
-            }  
-              
-            pom.project {  
-                name project.name  
-                packaging 'jar'
-                description 'springmvc tool'  
-                url 'https://github.com/featherfly/web.git'  
-  
-                scm {  
-                    url 'scm:git@github.com:featherfly/web.git'  
-                    connection 'scm:git@github.com:featherfly/web.git'  
-                    developerConnection 'git@github.com:featherfly/web.git'  
-                }  
-  
-                licenses {  
-                    license {  
-                        name 'The Apache Software License, Version 2.0'  
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'  
-                        distribution 'repo'  
-                    }  
-                }  
-  
-                developers {  
-                    developer {  
-                        id 'featherfly'  
-                        name 'Yufei'
-                    }  
-                }  
-            }  
-        }  
-    }  
-}
-/*
-test {
-    useTestNG()
-    testLogging.showStandardStreams = true
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-    jvmArgs '-XX:MaxPermSize=256m'
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
-    }
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
-    }
-}
-*/
-jar {
-    manifest.attributes 'Build-Name': archivesBaseName
-    manifest.attributes 'Build-By': "zhong ji"
-    manifest.attributes 'Build-Tool' : "gradle " + gradle.gradleVersion
-    manifest.attributes 'Build-Jdk' : ant.properties['java.runtime.version']
-    manifest.attributes 'Bundle-License': 'http://www.apache.org/licenses/LICENSE-2.0'
 }
